<resources>
    <string name="app_name">TokioAndroidPoc</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name*</string>
    <string name="type_text">Type text</string>
    <string name="date_of_birth">Date Of Birth*</string>
    <string name="gender">Gender</string>
    <string name="maritial_status">Maritial Status</string>
    <string name="continues">Continue</string>
    <string name="divorced">Divorced</string>
    <string name="single">Single</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
</resources>
